# Simple-Django-Login_and_Register

./: LICENSE  README.md  pyproject.toml
source/app/conf/production/: settings.py
