[tool.poetry]
name = "simple-django-login-and-register"
version = "4.0"
description = "An example of Django project with basic user functionality."
readme = "README.md"
repository = "https://github.com/shubhammate013/Simple-Django-Login_and_Register.git"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = ">=3.11"
Django = "==5.0.7"
django-bootstrap4 = "==24.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
